--- a/src/assets/i18n/gu.json
+++ b/src/assets/i18n/gu.json
@@ -30,7 +30,7 @@
   
     "LANGUAGE_SELECTION": "ભાષા પસંદ કરો",
     "VEHICLE_SELECTION": "વાહન પસંદ કરો",
-    "TRACTOR_FUEL_COST_CALCULATION": "ટ્રેક્ટર ઇંધણ ખર્ચ ગણતરી",
+    "TRACTOR_FUEL_COST_CALCULATION": "JCB & ટ્રેક્ટર ઇંધણ ખર્ચ ગણતરી",
     "BIKE": "સાયકલ",
     "CAR": "કાર",
     "TRACTOR": "ટ્રેક્ટર",
@@ -52,7 +52,7 @@
     "MINUTES": "મિનિટ",
     "SECONDS": "સેકન્ડ",
     "LITERS": "લીટર",
-    "TRACTOR_FUEL_CALCULATOR": "ટ્રેક્ટર ઇંધણ ગણતરી",
+    "TRACTOR_FUEL_CALCULATOR": "JCB & ટ્રેક્ટર ઇંધણ ગણતરી",
     "TOTAL_HOURS": "કુલ કલાક",
     "CLEAR_ALL": "બધા સાફ કરો",
     "DELETE": "હટાવો",
