--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -31,7 +31,7 @@
 
     "LANGUAGE_SELECTION": "भाषा चुनें",
     "VEHICLE_SELECTION": "वाहन चुनें",
-    "TRACTOR_FUEL_COST_CALCULATION": "ट्रैक्टर ईंधन लागत गणना",
+    "TRACTOR_FUEL_COST_CALCULATION": "JCB & ट्रैक्टर ईंधन लागत गणना",
     "BIKE": "साइकिल",
     "CAR": "कार",
     "TRACTOR": "ट्रैक्टर",
@@ -53,7 +53,7 @@
     "MINUTES": "मिनट",
     "SECONDS": "सेकंड",
     "LITERS": "लीटर",
-    "TRACTOR_FUEL_CALCULATOR": "ट्रैक्टर ईंधन गणक",
+    "TRACTOR_FUEL_CALCULATOR": "JCB & ट्रैक्टर ईंधन गणक",
     "TOTAL_HOURS": "कुल घंटे",
     "CLEAR_ALL": "सभी साफ करें",
     "DELETE": "हटाएं",
