--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Fuel Calculator</string>
-    <string name="title_activity_main">Fuel Calculator</string>
+    <string name="app_name">Fuel Mitra</string>
+    <string name="title_activity_main">Fuel Mitra</string>
     <string name="package_name">com.msproducts.fuelApp</string>
     <string name="custom_url_scheme">com.msproducts.fuelApp</string>
     <string name="admob_app_id">ca-app-pub-1047405219515945~2800479571</string>
