--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -76,8 +76,10 @@
     "PLEASE_FILL_ALL_FIELDS": "Please fill in all fields.",
     "RESULT": "Result",
     "TOTAL_COST": "Total Cost",
+    "TOTAL_EXPENSE_COST": "Total Expense Cost",
     "FUEL_AMOUNT": "Total Fuel Amount",
     "TOTAL_FUEL_PRICE": "Total fuel price",
+    "TOTAL_QUANTITY_FUEL_PRICE": "Quantity Fuel Price",
     "SPEED": "Speed",
     "AVG_PER_HOURS": "per/hour",
 
