--- a/www/assets/i18n/hi.json
+++ b/www/assets/i18n/hi.json
@@ -77,6 +77,7 @@
     "TOTAL_COST": "कुल लागत",
     "FUEL_AMOUNT": "कितने का ईंधन डाला",
     "TOTAL_FUEL_PRICE": "कुल ईंधन की कीमत",
+    "TOTAL_QUANTITY_FUEL_PRICE": "कुल ईंधन कीमत",
     "SPEED": "स्पीड",
     "AVG_PER_HOURS": "per/hour",
 
