--- a/src/assets/i18n/gu.json
+++ b/src/assets/i18n/gu.json
@@ -91,7 +91,7 @@
     "TRACTOR_FERA_COST_CALCULATION": "ટ્રેક્ટર ફેરા ખર્ચ ગણતરી",
 
     "1_FERA_COST": "1 એક ફેરાનો ભાવ",
-    "PER_FERA_COST": "પ્રતિ ફેરા ખર્ચ",
+    "PER_FERA_COST": "કુલ ફેરા",
     "TOTAL_FERA_COST": "કુલ ફેરા ખર્ચ",
 
     "START_TIME": "શરૂઆતનો સમય",
