--- a/www/assets/i18n/gu.json
+++ b/www/assets/i18n/gu.json
@@ -42,7 +42,7 @@
     "CALCULATE_FUEL_QUANTITY": "ઇંધણ માત્રા",
     "CALCULATE_FUEL_QUANTITY_Price": "ઇંધણ માત્રા કિંમત",
     "TOTAL_FUEL_QUANTITY": "કુલ ઇંધણ માત્રા",
-    "HISTORY": "સંગ્રહ",
+    "HISTORY": "All રેકૉર્ડ ",
     "FUEL_COST": "ઇંધણ ખર્ચ",
     "DISTANCE": "અંતર",
     "AVERAGE": "એવરેજ",
@@ -91,7 +91,7 @@
     "TRACTOR_FERA_COST_CALCULATION": "ટ્રેક્ટર ફેરા ખર્ચ ગણતરી",
 
     "1_FERA_COST": "1 એક ફેરાનો ભાવ",
-    "PER_FERA_COST": "પ્રતિ ફેરા ખર્ચ",
+    "PER_FERA_COST": "કુલ ફેરા",
     "TOTAL_FERA_COST": "કુલ ફેરા ખર્ચ",
 
     "START_TIME": "શરૂઆતનો સમય",
