--- a/src/assets/i18n/gu.json
+++ b/src/assets/i18n/gu.json
@@ -36,7 +36,7 @@
     "BIKE": "સાયકલ",
     "CAR": "કાર",
     "TRACTOR": "ટ્રેક્ટર",
-    "CALCULATE_FUEL_COST": "Car ઇંધણ ખર્ચ હિસાબ",
+    "CALCULATE_FUEL_COST": "Car & Bike ઇંધણ ખર્ચ હિસાબ",
     "CALCULATE_DISTANCE_TIME": "અંતર અને સમય ",
     "CALCULATE_RANGE": "કુલ અંતર",
     "CALCULATE_FUEL_QUANTITY": "ઇંધણ માત્રા",
