--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -37,7 +37,7 @@
     "BIKE": "साइकिल",
     "CAR": "कार",
     "TRACTOR": "ट्रैक्टर",
-    "CALCULATE_FUEL_COST": "Car ईंधन गणना करें",
+    "CALCULATE_FUEL_COST": "Car & Bike ईंधन गणना करें",
     "CALCULATE_DISTANCE_TIME": "दूरी और समय गणना करें",
     "CALCULATE_RANGE": "कुल दूरी",
     "CALCULATE_FUEL_QUANTITY": "ईंधन मात्रा गणना करें",
