--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,7 +141,7 @@
     "CANCEL": "Cancel",
 
     "JCB_HISTORY": "JCB History",
-    "CAR_HISTORY": "Car History",
+    "CAR_HISTORY": "Car & Bike History",
     "TRACTOR_HISTORY": "Tractor History",
     "MINI_TRACTOR_HISTORY": "Mini Tractor History",
     "FUEL_QUANTITY_HISTORY": "Fuel Quantity History",
