--- a/src/assets/i18n/gu.json
+++ b/src/assets/i18n/gu.json
@@ -138,7 +138,7 @@
     "CANCEL": "રદ કરો",
 
     "JCB_HISTORY": "JCB રેકૉર્ડ",
-    "CAR_HISTORY": "કાર રેકૉર્ડ",
+    "CAR_HISTORY": "Car & Bike રેકૉર્ડ",
     "TRACTOR_HISTORY": "ટ્રેક્ટર રેકૉર્ડ",
     "MINI_TRACTOR_HISTORY": "મિની ટ્રેક્ટર રેકૉર્ડ",
     "FUEL_QUANTITY_HISTORY": "ઇંધણ માત્રા રેકૉર્ડ",
