--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -152,7 +152,7 @@
     "CANCEL": "रद्द करें",
 
     "JCB_HISTORY": "JCB इतिहास",
-    "CAR_HISTORY": "कार इतिहास",
+    "CAR_HISTORY": "Car & Bike इतिहास",
     "TRACTOR_HISTORY": "ट्रैक्टर इतिहास",
     "MINI_TRACTOR_HISTORY": "मिनी ट्रैक्टर इतिहास",
     "FUEL_QUANTITY_HISTORY": "ईंधन मात्रा इतिहास",
