--- a/www/assets/i18n/gu.json
+++ b/www/assets/i18n/gu.json
@@ -36,7 +36,7 @@
     "BIKE": "સાયકલ",
     "CAR": "કાર",
     "TRACTOR": "ટ્રેક્ટર",
-    "CALCULATE_FUEL_COST": "Car ઇંધણ ખર્ચ હિસાબ",
+    "CALCULATE_FUEL_COST": "Car & Bike ઇંધણ ખર્ચ હિસાબ",
     "CALCULATE_DISTANCE_TIME": "અંતર અને સમય ",
     "CALCULATE_RANGE": "કુલ અંતર",
     "CALCULATE_FUEL_QUANTITY": "ઇંધણ માત્રા",
@@ -138,7 +138,7 @@
     "CANCEL": "રદ કરો",
 
     "JCB_HISTORY": "JCB રેકૉર્ડ",
-    "CAR_HISTORY": "કાર રેકૉર્ડ",
+    "CAR_HISTORY": "Car & Bike રેકૉર્ડ",
     "TRACTOR_HISTORY": "ટ્રેક્ટર રેકૉર્ડ",
     "MINI_TRACTOR_HISTORY": "મિની ટ્રેક્ટર રેકૉર્ડ",
     "FUEL_QUANTITY_HISTORY": "ઇંધણ માત્રા રેકૉર્ડ",
